--- a/index.html
+++ b/index.html
@@ -7,5 +7,30 @@
     <title>FitClub</title>
 </head>
 <body>
+
+    <div class="header-wrapper section-wrapper">
+        <header class="header max-width">
+            <div class="header-logo">
+                <img src="images/logo.png" alt="logo">
+            </div>
+
+            <div class="collapse-button" id="collapse-button" onclick="header()">
+                <span>Menu</span><span id="collapse-button-animation">III</span>
+            </div>
+
+            <nav class="header-nav" id="header-nav">
+                <ul class="header-nav-actions_left" id="header-nav-actions_left">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Program</a></li>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Community</a></li>
+                </ul>
+                <ul class="header-nav-actions_right" id="header-nav-actions_right">
+                    <li><a href="#">Join Now</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
 </body>
 </html>
