--- a/index.html
+++ b/index.html
@@ -32,5 +32,37 @@
             </nav>
         </header>
     </div>
+
+    <div class="main-wrapper section-wrapper">
+        <main class="main max-width">
+
+            <div class="main-image">
+                <img src="images/header.png" alt="">
+                <span class="main-image-o">O</span>
+                <span class="main-image-text">fitness</span>
+            </div>
+
+            <div class="main-content">
+
+                <h2 class="main-sub_title">
+                    Best fitness in the town
+                </h2>
+
+                <h1 class="main-title">
+                    <span>Make</span> your <br>body shape
+                </h1>
+
+                <p class="main-text">
+                    Unsleash your potential and embark on a journey towards a stronger, fitter and more confident you. Sign up for 'Make Your Body Shape' now and witness the incredible transformation your body is capable of!
+                </p>
+
+                <span class="main-link">
+                    <a href="#">Get started</a>
+                </span>
+
+            </div>
+
+        </main>
+    </div>
 </body>
 </html>
