--- a/index.html
+++ b/index.html
@@ -64,5 +64,83 @@
 
         </main>
     </div>
+
+    <div class="program-wrapper section-wrapper">
+        <section class="program max-width">
+            
+            <div class="program-top">
+                <h1 class="program-title section-title">
+                    Explore our program
+                </h1>
+                <div class="program-actions">
+                    <div class="program-swipe">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <g fill="#fff">
+                              <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                              <polygon points="13.293 7.293 8.586 12 13.293 16.707 14.707 15.293 11.414 12 14.707 8.707 13.293 7.293"/>
+                            </g>
+                          </svg>
+                    </div>
+                    <div class="program-swipe">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <g fill="#fff">
+                              <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                              <polygon points="9.293 8.707 12.586 12 9.293 15.293 10.707 16.707 15.414 12 10.707 7.293 9.293 8.707"/>
+                            </g>
+                          </svg>
+                          
+                    </div>
+                </div>
+            </div>
+
+            <div class="program-container">
+
+                <div class="program-item">
+                    <div class="program-icon">
+                        <img src="images/svg/strength.svg" alt="Strength icon">
+                    </div>
+                    <h2 class="program-item-title">Strength</h2>
+                    <p class="program-item-text">
+                        Embrace the essence of strength as we dive into it's various dimensions: physical, mental and emotionally.
+                    </p>
+                    <span class="program-item-link"><a href="#">Join Now</a></span>
+                </div>
+
+                <div class="program-item">
+                    <div class="program-icon">
+                        <img src="images/svg/fitness.svg" alt="Fitness icon">
+                    </div>
+                    <h2 class="program-item-title">Physical Fitness</h2>
+                    <p class="program-item-text">
+                        It encompasses a range of actiovities that improve health, strength, flexibility and overall well-being.
+                    </p>
+                    <span class="program-item-link"><a href="#">Join Now</a></span>
+                </div>
+
+                <div class="program-item">
+                    <div class="program-icon">
+                        <img src="images/svg/fat-lose.svg" alt="Fat lose icon">
+                    </div>
+                    <h2 class="program-item-title">Fat Lose</h2>
+                    <p class="program-item-text">
+                        Through a combination of workout routines and expert guidance, we'll empower you to reach your goals.
+                    </p>
+                    <span class="program-item-link"><a href="#">Join Now</a></span>
+                </div>
+
+                <div class="program-item">
+                    <div class="program-icon">
+                        <img src="images/svg/weight.svg" alt="Weight icon">
+                    </div>
+                    <h2 class="program-item-title">Weight Gain</h2>
+                    <p class="program-item-text">
+                        Designed for individuals, out program offers ans effective approach to gaining weight in a sustainable manner.
+                    </p>
+                    <span class="program-item-link"><a href="#">Join Now</a></span>
+                </div>
+
+            </div>
+        </section>
+    </div>
 </body>
 </html>
