--- a/index.html
+++ b/index.html
@@ -142,5 +142,34 @@
             </div>
         </section>
     </div>
+
+    <div class="class-wrapper section-wrapper">
+        <section class="class max-width">
+
+            <div class="class-images">
+                <div class="class-image-big" id="image-1">
+                    <img src="images/class-1.jpg" alt="Class image 1" >
+                </div>
+                <div class="class-image-small" id="image-2">
+                    <img src="images/class-2.jpg" alt="Class image 2" >
+                </div>
+            </div>
+
+            <div class="class-content">
+                <h1 class="class-title section-title">
+                    The class you will get here
+                </h1>
+
+                <p class="class-text">
+                    Led by our team of expert and motivational instructors, "The Class You Will Get Here" is a high-energy, results-crive session that combines a perfect blend of cardio, strength training, and functional exercises. Each class is carefully curated to keep you engaged and challenged, ensuring you never hit a plateau in your fitness endeavors.
+                </p>
+
+                <span class="class-link">
+                    <a href="#">Book a class</a>
+                </span>
+            </div>
+        </section>
+    </div>
+
 </body>
 </html>
