--- a/index.html
+++ b/index.html
@@ -171,5 +171,60 @@
         </section>
     </div>
 
+    <div class="join-wrapper section-wrapper">
+        <section class="join max-width">
+
+            <div class="join-top">
+                <h1 class="section-title">
+                    Why join us?
+                </h1>
+                <p>
+                    Our diverse membership base creates a friendly and supportive atmosphere, where you can make friends and stay motivated.
+                </p>
+            </div>
+
+            <div class="join-content max-width">
+
+                <img class="join-image" src="images/join.jpg" alt="Join image">
+
+                <div class="join-content-container">
+                    <div class="join-content-item">
+                        <img src="images/svg/personal.svg" alt="">
+                        <div class="join-content-text">
+                            <h2>
+                                Personal Trainer
+                            </h2>
+                            <p>
+                                Unlock your potential with our expert Personal Trainers.
+                            </p>
+                        </div>
+                    </div>
+                        <div class="join-content-item">
+                            <img src="images/svg/practice.svg" alt="">
+                            <div class="join-content-text">
+                                <h2>
+                                    Practice Sessions
+                                </h2>
+                                <p>
+                                    Elevate your fitness with practice sessions.
+                                </p>
+                            </div>
+                    </div>
+                    <div class="join-content-item">
+                        <img src="images/svg/management.svg" alt="">
+                        <div class="join-content-text">
+                            <h2>
+                                Good Management
+                            </h2>
+                            <p>
+                                Supportive management for your fitness success.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+
 </body>
 </html>
