--- a/index.html
+++ b/index.html
@@ -226,5 +226,76 @@
         </section>
     </div>
 
+    <div class="plans-wrapper section-wrapper">
+        <section class="plans max-width">
+            <div class="plans-top">
+                <h1 class="section-title">Our pricing plans</h1>
+                <p>Our pricing plan comes with various membership tiers, each tailored to cater to different preferences and fitness aspirations.</p>
+            </div>
+            <div class="plans-container">
+                <div class="plans-item">
+                    <div class="plans-item-top">
+                        <h2>
+                            Basic Plan
+                        </h2>
+                        <span>
+                            $16
+                        </span>
+                    </div>
+                    <div class="plans-item-bottom">
+                        <ul class="plans-item-info">
+                            <li>Smart workout plan</li>
+                            <li>At home workouts</li>
+                        </ul>
+                        <div class="plans-item-link">
+                            <a href="#">Join Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="plans-item">
+                    <div class="plans-item-top">
+                        <h2>
+                            Weekly Plan
+                        </h2>
+                        <span>
+                            $25
+                        </span>
+                    </div>
+                    <div class="plans-item-bottom">
+                        <ul class="plans-item-info">
+                            <li>PRO Gyms</li>
+                            <li>Smart workout plan</li>
+                            <li>At home workouts</li>
+                        </ul>
+                        <div class="plans-item-link">
+                            <a href="#">Join Now</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="plans-item">
+                    <div class="plans-item-top">
+                        <h2>
+                            Monthly Plan
+                        </h2>
+                        <span>
+                            $45
+                        </span>
+                    </div>
+                    <div class="plans-item-bottom">
+                        <ul class="plans-item-info">
+                            <li>ELITE Gyms & Classes</li>
+                            <li>PRO Gyms</li>
+                            <li>Smart workout plan</li>
+                            <li>At home workouts</li>
+                            <li>Personal Training</li>
+                        </ul>
+                        <div class="plans-item-link">
+                            <a href="#">Join Now</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
