--- a/index.html
+++ b/index.html
@@ -297,5 +297,56 @@
             </div>
         </section>
     </div>
+
+    <div class="review-wrapper section-wrapper">
+        <section class="review max-width">
+            <div class="review-image">
+                <img src="images/svg/quote.svg" alt="">
+            </div>
+
+            <div class="review-content">
+                <h1 class="section-title">
+                    Member review
+                </h1>
+                <p>
+                    What truly sets this gym apart is their expert team of trainers. They are knowledgeable, approachable and genuinely invested in healping member achieve their fitness goals. They take the time to undestand individual needs and create personalized workout plans, ensuring maximum results and safety.
+                </p>
+                <div class="review-score">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <div class="review-member">
+                    <div class="review-member-icon">
+                        <img src="images/member.jpg" alt="">
+                    </div>
+                    <div class="review-member-text">
+                        <h2 class="review-member-name">
+                            Jane Cooper
+                        </h2>
+                        <h3 class="review-member-info">
+                            Software Developer
+                        </h3>
+                    </div>
+                    <div class="review-member-actions">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <g fill="#f9ac54">
+                              <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                              <polygon points="13.293 7.293 8.586 12 13.293 16.707 14.707 15.293 11.414 12 14.707 8.707 13.293 7.293"/>
+                            </g>
+                        </svg>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                            <g fill="#f9ac54">
+                              <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                              <polygon points="9.293 8.707 12.586 12 9.293 15.293 10.707 16.707 15.414 12 10.707 7.293 9.293 8.707"/>
+                            </g>
+                        </svg>                          
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
