--- a/index.html
+++ b/index.html
@@ -266,8 +266,20 @@
                     </div>
                     <div class="plans-item-bottom">
                         <ul class="plans-item-info">
-                            <li>Smart workout plan</li>
-                            <li>At home workouts</li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <g fill="#f9ac54">
+                                    <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                                    <polygon points="9.293 8.707 12.586 12 9.293 15.293 10.707 16.707 15.414 12 10.707 7.293 9.293 8.707"/>
+                                </g>
+                                </svg>Smart workout plan
+                            </li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <g fill="#f9ac54">
+                                    <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                                    <polygon points="9.293 8.707 12.586 12 9.293 15.293 10.707 16.707 15.414 12 10.707 7.293 9.293 8.707"/>
+                                </g>
+                                </svg>At home workouts
+                            </li>
                         </ul>
                         <div class="plans-item-link">
                             <a href="#">Join Now</a>
@@ -285,9 +297,27 @@
                     </div>
                     <div class="plans-item-bottom">
                         <ul class="plans-item-info">
-                            <li>PRO Gyms</li>
-                            <li>Smart workout plan</li>
-                            <li>At home workouts</li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <g fill="#f9ac54">
+                                    <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                                    <polygon points="9.293 8.707 12.586 12 9.293 15.293 10.707 16.707 15.414 12 10.707 7.293 9.293 8.707"/>
+                                </g>
+                                </svg>PRO Gyms
+                            </li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <g fill="#f9ac54">
+                                    <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                                    <polygon points="9.293 8.707 12.586 12 9.293 15.293 10.707 16.707 15.414 12 10.707 7.293 9.293 8.707"/>
+                                </g>
+                                </svg>Smart workout plan
+                            </li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <g fill="#f9ac54">
+                                    <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                                    <polygon points="9.293 8.707 12.586 12 9.293 15.293 10.707 16.707 15.414 12 10.707 7.293 9.293 8.707"/>
+                                </g>
+                                </svg>At home workouts
+                            </li>
                         </ul>
                         <div class="plans-item-link">
                             <a href="#">Join Now</a>
@@ -305,11 +335,41 @@
                     </div>
                     <div class="plans-item-bottom">
                         <ul class="plans-item-info">
-                            <li>ELITE Gyms & Classes</li>
-                            <li>PRO Gyms</li>
-                            <li>Smart workout plan</li>
-                            <li>At home workouts</li>
-                            <li>Personal Training</li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <g fill="#f9ac54">
+                                    <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                                    <polygon points="9.293 8.707 12.586 12 9.293 15.293 10.707 16.707 15.414 12 10.707 7.293 9.293 8.707"/>
+                                </g>
+                                </svg>ELITE Gyms & Classes
+                            </li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <g fill="#f9ac54">
+                                    <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                                    <polygon points="9.293 8.707 12.586 12 9.293 15.293 10.707 16.707 15.414 12 10.707 7.293 9.293 8.707"/>
+                                </g>
+                                </svg>PRO Gyms
+                            </li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <g fill="#f9ac54">
+                                    <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                                    <polygon points="9.293 8.707 12.586 12 9.293 15.293 10.707 16.707 15.414 12 10.707 7.293 9.293 8.707"/>
+                                </g>
+                                </svg>Smart workout plan
+                            </li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <g fill="#f9ac54">
+                                    <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                                    <polygon points="9.293 8.707 12.586 12 9.293 15.293 10.707 16.707 15.414 12 10.707 7.293 9.293 8.707"/>
+                                </g>
+                                </svg>At home workouts
+                            </li>
+                            <li><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <g fill="#f9ac54">
+                                    <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                                    <polygon points="9.293 8.707 12.586 12 9.293 15.293 10.707 16.707 15.414 12 10.707 7.293 9.293 8.707"/>
+                                </g>
+                                </svg>Personal Training
+                            </li>
                         </ul>
                         <div class="plans-item-link">
                             <a href="#">Join Now</a>
@@ -417,7 +477,13 @@
                     <h2>About Us</h2>
                     <li><a href="#">Blogs</a></li>
                     <li><a href="#">Security</a></li>
-                    <li><a href="#">Carrers</a></li>
+                    <li><a href="#">C<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+                                <g fill="#f9ac54">
+                                    <path d="M12,2A10,10,0,1,0,22,12,10.011,10.011,0,0,0,12,2Zm0,18a8,8,0,1,1,8-8A8.009,8.009,0,0,1,12,20Z"/>
+                                    <polygon points="9.293 8.707 12.586 12 9.293 15.293 10.707 16.707 15.414 12 10.707 7.293 9.293 8.707"/>
+                                </g>
+                                </svg>ers</a>
+                            </li>
                 </ul>
                 <ul class="footer-contact">
                     <h2>Contact</h2>
